<resources>
    <string name="app_name">CoiniApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registerInCoini">Regístrate en Coini</string>
    <string name="enterCountryAndPhone">Ingrese su país y número de teléfono</string>
    <string name="enterYourNumber">Ingrese su número</string>
    <string name="next">Siguiente</string>
    <string name="searchCountry">Buscar país</string>
    <string name="currentUbication">Ubicación actual</string>
    <string name="countryAndRegion">País/Región</string>
    <string name="verification">Verificación</string>
    <string name="detailVerification">Le enviamos un número de verificación vía SMS</string>
    <string name="noReceiveMessage">¿No recibió el mensaje?</string>
    <string name="resend"><u>Reenviar</u></string>
    <string name="generationSeedPhrase">Generación de frase semilla</string>
    <string name="detailSeedPhrase">Estas 12 palabras son la única forma de recuperar su billetera de Coini. Escríbalas o guárdelas en un lugar seguro y secreto.</string>
    <string name="saveSeedPhrase">¡Ya guardé mi frase semilla!</string>
    <string name="paper">Papel</string>
    <string name="password">Contraseña</string>
    <string name="enterAPassword">Ingrese una contraseña de 6 dígitos</string>
    <string name="enter">Ingresar</string>
    <string name="returnText"><u>Regresar</u></string>
    <string name="myBalance">Mi balance</string>
    <string name="scanQr">Escanear QR</string>
    <string name="send">Enviar</string>
    <string name="lastTransactions">Últimas transacciones</string>
    <string name="addMessage">Agregar mensaje (opcional)</string>
    <string name="cancel"><u>Cancelar</u></string>
    <string name="soles">S/</string>
    <string name="amount">0.00</string>
    <string name="congratulations">¡Felicitaciones!</string>
    <string name="receive">Recibir</string>
    <string name="scanCodeQr">Escanea el Código QR</string>
    <string name="messageReceiveCode">Recibe DAI, USDC o USDT desde billeteras de la red Celo. Se convertirán automáticamente en USDC.</string>
    <string name="copyAddress">O copia la siguiente dirección:</string>
    <string name="viewAll"><u>Ver todos</u></string>
</resources>