<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
    <variable
        name="viewModel"
        type="com.gitlab.juancode.coiniapp.ui.register.RegisterViewModel" />
</data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.register.stepFour.StepFourFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textFontWeight="600"
            android:textSize="18sp"
            tools:targetApi="p" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/enterAPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.chaos.view.PinView
                android:id="@+id/firstPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="000000"
                android:inputType="number"
                android:textSize="18sp"
                android:textStyle="bold"
                app:lineColor="@color/gray10"
                app:cursorWidth="2dp"
                app:itemCount="6"
                app:itemHeight="50dp"
                app:itemRadius="6dp"
                app:itemSpacing="15dp"
                app:itemWidth="40dp"
                app:lineWidth="2dp"
                app:viewType="rectangle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/buttonEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_purple_disable_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:textColor="@color/black"
        android:text="@string/returnText"/>


</LinearLayout>
</layout>