<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.gitlab.juancode.coiniapp.ui.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.register.RegisterStepOneFragment">

        <ImageView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_logo" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerInCoini"
                android:textFontWeight="600"
                android:textSize="18sp"
                tools:targetApi="p" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/enterCountryAndPhone" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:background="@drawable/country_phone_shape"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/countryLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_world"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="8dp"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_bottom"
                        android:scaleType="centerCrop" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="+00"
                    android:text="+00"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/gray" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/enterYourNumber"
                    android:textColorHint="@color/gray"
                    android:background="@null"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_purple_disable_shape">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>