<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gitlab.juancode.coiniapp.ui.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.register.stepThree.RegisterStepThreeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generationSeedPhrase"
                android:textFontWeight="600"
                android:textSize="18sp"
                tools:targetApi="p" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailSeedPhrase"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_margin="20dp"
            android:padding="20dp"
            android:background="@drawable/card_phrase_gray_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="15dp"

            android:text="Papel     Calibrar    Computadora     Quinta       Dirección      Columna     Oportunidad     Libertad    Plato   Tortuga     Cuchara     Alimentos   Excepción    Cuaderno   Retrato     Leyenda     Página  Consola     Electricidad    Alimentos"
            android:justificationMode="inter_word"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_eye"
                android:padding="12dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/circular_purple_hard_shape"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_copy"
                android:layout_marginStart="10dp"
                android:padding="12dp"
                android:background="@drawable/circular_purple_hard_shape"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <LinearLayout
                android:id="@+id/layoutNextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_purple_enable_shape">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="40dp"
                    android:paddingBottom="10dp"
                    android:text="@string/saveSeedPhrase"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>
