<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.gitlab.juancode.coiniapp.ui.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:context=".ui.register.country.RegisterCountryFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:background="@drawable/search_shape"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etSearchCountry"
                android:layout_weight="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/searchCountry"
                android:textSize="14sp"
                android:textColorHint="@color/gray20"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                />

            <ImageView
                android:layout_weight="0"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_search"
                android:scaleType="centerInside"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/currentUbication"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:ignore="UnusedAttribute" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivCurrentFlag"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:scaleType="centerInside"
                    tools:src="@drawable/ic_pe"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvNameFlag"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textSize="14sp"
                    tools:text="Perú"/>

                <TextView
                    android:id="@+id/tvCountryCode"
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="+51"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/countryAndRegion"
            android:textFontWeight="600"
            android:textSize="16sp"
            android:textColor="@color/black"
            tools:ignore="UnusedAttribute" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_country"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>
</layout>